# sandbox

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.test.yml  go.mod  go.sum
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agent/: dispatch.go  server.go
agent/env/: env.go  env_test.go
agent/fs/: fs.go  fs_test.go
agent/net/: net.go
agent/process/: process.go  process_test.go  pty.go
agent/protocol/: codec.go  codec_test.go  crypto_conn.go  crypto_conn_test.go
cmd/sandbox-agent/: main.go  vsock_linux.go  vsock_other.go
cmd/sandboxd/: main.go  main_test.go
cmd/sbx/: cli.go  cmd_build.go  cmd_exec.go  cmd_fs.go  cmd_pool.go  cmd_sandbox.go  cmd_template.go  main.go  (+2 more)
config/: sandboxd.example.toml  sandboxd.test.toml
conventions/: PERFORMANCE.md
deploy/: docker-compose.yml  sandboxd.service
docs/: deployment.md
mcp/: deno.json  package.json  tsconfig.json  tsup.config.ts
protocol/: frame.go  frame_test.go  ops.go  ops_test.go  rpc.go  rpc_test.go
scripts/: install.sh  start-sandboxd.sh  stop-sandboxd.sh  wait-for-healthy.sh
sdk/python/: pyproject.toml
sdk/python/byggflow/sandbox/: __init__.py  env.py  errors.py  net.py  process.py  transport.py
sdk/python/sandbox/: __init__.py  auth.py  call.py  e2e.py  fs.py  net.py  process.py  sandbox.py  template.py  transport.py
sdk/python/tests/: test_auth.py  test_errors.py  test_exports.py
sdk/python/tests/integration/: test_sandbox.py
(+97 files in other folders)
