[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byggflow-sandbox"
version = "0.0.0"
description = "Python SDK for sandboxd — high-frequency container sandboxing as a service"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Byggflow", email = "hello@byggflow.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["byggflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
